# zephyr-example

./: CMakeLists.txt  README.md  west.yml
app/: CMakeLists.txt  debug.conf  prj.conf  sample.yaml
app/boards/: bbc_microbit_v2.overlay
app/src/: main.c
custom-module/: CMakeLists.txt  west.yml
custom-module/drivers/: CMakeLists.txt  Kconfig
custom-module/drivers/ledmatrix/: CMakeLists.txt  Kconfig  ledmatrix.c
custom-module/dts/bindings/: custom-led-matrix.yaml  custom-ledmatrix.yaml  ledmatrix.yaml
custom-module/include/app/drivers/: ledmatrix.h
custom-module/lib/: CMakeLists.txt  Kconfig
custom-module/lib/accel/: Kconfig  accel.c
custom-module/zephyr/: module.yml
include/app/lib/: accel.h
lib/accel/: CMakeLists.txt  Kconfig
